--- a/packages/countries/package.json
+++ b/packages/countries/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@datapackages/countries",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.1.0",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "sideEffects": false,
   "exports": {
@@ -34,7 +37,7 @@
     "vitest": "^3.0.5"
   },
   "dependencies": {
-    "@datapackages/dataset": "^0.0.0",
-    "@datapackages/plugin-search": "^0.0.0"
+    "@datapackages/dataset": "^0.1.0",
+    "@datapackages/plugin-search": "^0.1.0"
   }
 }
