--- a/packages/dataset/package.json
+++ b/packages/dataset/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@datapackages/dataset",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.1.0",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "sideEffects": false,
   "exports": {
@@ -35,7 +38,7 @@
     "jiti": "^2.6.1"
   },
   "devDependencies": {
-    "@datapackages/plugin-search": "^0.0.0",
+    "@datapackages/plugin-search": "^0.1.0",
     "citty": "^0.2.1",
     "typescript": "^5.8.2",
     "unbuild": "^3.3.1",
