--- a/packages/medical-terminologies/package.json
+++ b/packages/medical-terminologies/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@datapackages/medical-terminologies",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.1.0",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "sideEffects": false,
   "exports": {
@@ -52,8 +55,8 @@
     "vitest": "^3.0.5"
   },
   "dependencies": {
-    "@datapackages/dataset": "^0.0.0",
-    "@datapackages/plugin-search": "^0.0.0",
+    "@datapackages/dataset": "^0.1.0",
+    "@datapackages/plugin-search": "^0.1.0",
     "consola": "^3.4.2"
   }
 }
