--- a/packages/plugin-live-update/package.json
+++ b/packages/plugin-live-update/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@datapackages/plugin-live-update",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.1.0",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "sideEffects": false,
   "exports": {
@@ -24,7 +27,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@datapackages/dataset": "^0.0.0"
+    "@datapackages/dataset": "^0.1.0"
   },
   "devDependencies": {
     "typescript": "^5.8.2",
