--- a/packages/plugin-stream/package.json
+++ b/packages/plugin-stream/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@datapackages/plugin-stream",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.1.0",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "sideEffects": false,
   "exports": {
@@ -23,12 +26,12 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "@datapackages/dataset": "^0.0.0",
+    "@datapackages/dataset": "^0.1.0",
     "typescript": "^5.8.2",
     "unbuild": "^3.3.1",
     "vitest": "^3.0.5"
   },
   "peerDependencies": {
-    "@datapackages/dataset": "^0.0.0"
+    "@datapackages/dataset": "^0.1.0"
   }
 }
