--- a/packages/countries/package.json
+++ b/packages/countries/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@datapackages/countries",
   "version": "0.1.0",
-  "private": false,
   "publishConfig": {
     "access": "public"
   },
@@ -25,7 +24,7 @@
   "scripts": {
     "build": "unbuild",
     "dev": "unbuild --stub",
-    "test": "vitest run",
+    "test": "vitest run --passWithNoTests",
     "test:watch": "vitest",
     "update-sources": "datapackage update-source",
     "changelog": "changelogen --dir . --output CHANGELOG.md"
