--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -22,10 +22,9 @@ jobs:
         with:
           node-version: "20"
           cache: "yarn"
-          cache-dependency-path: docs/yarn.lock
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
         working-directory: docs
 
       - name: Static HTML export
