--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,14 @@ coverage
 *.tsbuildinfo
 .nuxt
 .output
+
+# Yarn v4
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+.yarn/install-state.gz
+
