--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "packages/*"
   ],
   "scripts": {
-    "test": "npm run test --workspaces",
+    "test": "yarn workspaces foreach -A run test",
     "test:coverage": "vitest run --coverage",
     "posttest:coverage": "node packages/dataset/scripts/update-coverage-docs.cjs",
-    "build": "npm run build --workspaces",
-    "update-sources": "npm run update-sources --workspaces --if-present",
+    "build": "yarn workspaces foreach -A run build",
+    "update-sources": "yarn workspaces foreach -A --if-present run update-sources",
     "changelog": "changelogen --output CHANGELOG.md"
   },
   "devDependencies": {
@@ -18,5 +18,6 @@
     "typescript": "^5.0.0",
     "unbuild": "^3.0.0",
     "vitest": "^4.0.18"
-  }
+  },
+  "packageManager": "yarn@4.12.0"
 }
